# song-helper

./: .dockerignore  .gitignore  .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.bot  Dockerfile.mobile  Dockerfile.server  LICENSE  README.md  docker-compose.debug.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  start.py
.github/ISSUE_TEMPLATE/: task-issue-template.md
.github/workflows/: bot.yml  ci.yml  django.yml  docker-image.yml  docker-publish.yml  (+5 more)
Discord-Bot/: main.py  requirements.txt
MobileSongHelper/: .eslintrc.json  App.js  app.json  package-lock.json  package.json
bot/: .env_sample  audiodownloader.py  bot.py  main.py  requirements.txt  test.py
client/: .eslintrc.json  .gitignore  .prettierignore  jest.config.js  jest.setup.js  package.json
docs/: OurData.csv  OurData1.csv
mobileApp/: .eslintignore  .eslintrc.json  App.js  app.json  main.py  package-lock.json  requirements.txt  styles.py  test_main.py  utils.py
server/: .env.example  README.md  authentication.py  config.py  database.py  dependencies.py  main.py  requirements.txt
song-helper/: MoodFromWords.py  config.py  create_data_set.py  fake_server.py  main.py  model.py  mood_from_words.py  mood_predictors.py  predict.py  requirements.txt  requirements1.txt  test_model.py  test_mood_from_words.py  test_mood_predictors.py  test_predict.py  test_utils.py  test_word_preprocessor.py  utils.py  words_preprocessor.py
songhelper/: .env_sample  create_data_set.py  mood_from_words.py  predict.py  requirements.txt  test_predict.py  test_word_preprocessor.py
(+86 files in other folders)
