[tool.poetry]
name = "song-helper"
version = "0.1.0"
description = ""
authors = ["valentyn2202 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
django = "^3.2"
flask = "^1.1.2"
youtube-dl = "^2021.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
